# type-builder

./: README.md  type-builder.cabal
app/: Main.hs
sources/: README.md  amqp.txt  any_connect.txt  bacnet.txt  coap.txt  cwmp.txt  dnp3.txt  dns.txt  elasticsearch.txt  fox.txt  ftp.txt  http.txt  ike.txt  imap.txt  ipmi.txt  ipp.txt  kubernetes.txt  ldap.txt  memcached.txt  mms.txt  modbus.txt  mongodb.txt  mqtt.txt  mssql.txt  mysql.txt  ntp.txt  openvpn.txt  oracle.txt  pc_anywhere.txt  pop3.txt  postgres.txt  pptp.txt  prometheus.txt  rdp.txt  redis.txt  s7.txt  sip.txt  skinny.txt  smb.txt  smtp.txt  (+8 more)
src/: Parser.hs
