cabal-version:      2.4
name:               type-builder
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Elliot Cubit
maintainer:         elliotcubit@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common
    build-depends:
      base ^>= 4.14.3.0
    default-language: Haskell2010
    ghc-options: -Wall -Werror

library
  import: common
  hs-source-dirs: src
  exposed-modules:
    Parser

executable type-builder
    import: common
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    type-builder
    hs-source-dirs:   app
    default-language: Haskell2010
